--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -1,4 +1,37 @@
 {
+    "words": {
+        "yes": "Yes",
+        "no": "No",
+        "files": "Files",
+        "uploaded": "Uploaded",
+        "processing": "Processing",
+        "finished": "Finished",
+        "all": "All",
+        "images": "Images",
+        "confidence": "Confidence",
+        "download": "Download",
+        "success": "Success",
+        "profile": "Profile",
+        "error": "Error",
+        "FinDetector": "FinDetector"
+    },
+    "phrases": {
+        "uploadButton": "Click here to load the file",
+        "deleteConfirmation": "Are you sure you want to delete this record?",
+        "successVerificationMessage": "Email successfully verified.",
+        "errorVerificationMessage": "An error occurred while verifying the email.",
+        "invalidVerificationMessage": "Invalid verification key!",
+        "tagFilterDescription": "Use tags to filter",
+        "imageSearch": "Image search",
+        "imageVisualization": "Image preview",
+        "isValidDetection": "Is detection valid?",
+        "isValidDetectionMessage": "Detection status updated successfully",
+        "updateProfile": "Update profile",
+        "addPicture": "Add an image",
+        "updatePassword": "Change password?",
+        "successUploadImage": "Upload successfully",
+        "errorUploadImage": "An error occurred while uploading the image"
+    },
     "pages": {
         "login": {
             "title": "Sign in to your account",
@@ -102,17 +135,10 @@
     "table": {
         "actions": "Actions"
     },
-    "search": {
-        "placeholder": "Search by Store ID, E-mail, Keyword",
-        "more": "more"
-    },
-    "status": {
-        "enable": "Enable",
-        "disable": "Disable"
-    },
     "warnWhenUnsavedChanges": "Are you sure you want to leave? You have unsaved changes.",
     "notifications": {
         "success": "Successful",
+        "error_": "Error",
         "error": "Error (status code: {{statusCode}})",
         "undoable": "You have {{seconds}} seconds to undo",
         "createSuccess": "Successfully created {{resource}}",
@@ -123,274 +149,27 @@
         "editError": "Error when editing {{resource}} (status code: {{statusCode}})",
         "importProgress": "Importing: {{processed}}/{{total}}"
     },
-    "categories": {
-        "categories": "Categories",
-        "titles": {
-            "list": "Categories"
-        },
-        "fields": {
-            "id": "ID",
-            "title": "Title",
-            "isActive": "Active"
-        }
-    },
-    "couriers": {
-        "couriers": "Couriers",
-        "titles": {
-            "create": "Create Courier",
-            "list": "Couriers",
-            "edit": "Edit Courier"
-        },
-        "fields": {
-            "id": "ID",
-            "avatar": {
-                "label": "Avatar",
-                "description": "Click or drag avatar image to this area to upload."
-            },
-            "name": "Name",
-            "surname": "Surname",
-            "gender": {
-                "label": "Gender",
-                "male": "Male",
-                "female": "Female"
-            },
-            "gsm": "Phone",
-            "email": "E-Mail",
-            "address": "Address",
-            "createdAt": "CreatedAt",
-            "isActive": "Is Active",
-            "images": {
-                "label": "Images",
-                "description": "Add user picture",
-                "validation": "must be 480x480 px"
-            },
-            "store": "Store",
-            "vehicle": "Vehicle",
-            "accountNumber": "Account Number"
-        },
-        "steps": {
-            "content": "Content",
-            "relations": "Relations"
-        }
-    },
-    "dashboard": {
-        "title": "Dashboard",
-        "deliveryMap": {
-            "title": "Delivery Map"
-        },
-        "orders": {
-            "title": "Orders"
-        },
-        "totalSales": {
-            "title": "Total Sales"
-        },
-        "dailyRevenue": {
-            "title": "Daily Revenue"
-        },
-        "dailyOrders": {
-            "title": "Daily Orders"
-        },
-        "newCustomers": {
-            "title": "New Customers"
-        },
-        "timeline": {
-            "title": "Timeline",
-            "orderStatuses": {
-                "pending": "Preparing order",
-                "ready": "Order is ready",
-                "on the way": "Order is on the way",
-                "delivered": "Order is delivered",
-                "cancelled": "Order is cancelled"
-            }
-        },
-        "recentOrders": {
-            "title": "Recent Orders"
-        },
-        "trendingMenus": {
-            "title": "Daily Trending Menus"
-        }
-    },
-    "enum": {
-        "orderStatuses": {
-            "Pending": "Pending",
-            "Ready": "Ready",
-            "On The Way": "On the way",
-            "Delivered": "Delivered",
-            "Cancelled": "Cancelled"
-        }
-    },
-    "orders": {
-        "orders": "Orders",
-        "titles": {
-            "list": "Orders",
-            "show": "Show Order"
-        },
-        "fields": {
-            "orderNumber": "Order Number",
-            "orderID": "Order ID",
-            "status": "Status",
-            "store": "Store",
-            "user": "User",
-            "products": "Products",
-            "createdAt": "CreatedAt",
-            "amount": "Amount",
-            "itemsAmount": "{{amount}} items"
-        },
-        "filter": {
-            "title": "Filters",
-            "search": {
-                "label": "Search",
-                "placeholder": "Order Number, User, etc."
-            },
-            "status": {
-                "label": "Status",
-                "placeholder": "Order Status"
-            },
-            "store": {
-                "label": "Store",
-                "placeholder": "Search Stores"
-            },
-            "user": {
-                "label": "User",
-                "placeholder": "Search Users"
-            },
-            "createdAt": {
-                "label": "Created At"
-            },
-            "submit": "Filter"
-        },
-        "courier": {
-            "deliveryTime": "Delivery Time",
-            "phone": "Phone"
-        },
-        "deliverables": {
-            "deliverables": "Deliverables",
-            "fields": {
-                "items": "Items",
-                "quantity": "Quantity",
-                "price": "Price",
-                "total": "Total"
-            },
-            "mainTotal": "MAIN TOTAL"
-        }
-    },
-    "products": {
-        "products": "Products",
-        "titles": {
-            "list": "Products",
-            "create": "Create Product",
-            "edit": "Edit Product"
-        },
-        "fields": {
-            "id": "ID",
-            "name": "Name",
-            "description": "Description",
-            "isActive": "Active",
-            "price": "Price",
-            "category": "Category",
-            "images": {
-                "label": "Images",
-                "description": "Add product picture",
-                "validation": "must be 1080x1080 px"
-            },
-            "createdAt": "CreatedAt"
-        }
-    },
-    "reviews": {
-        "reviews": "Reviews",
-        "titles": {
-            "list": "Reviews"
-        },
-        "fields": {
-            "user": "User",
-            "orderId": "Order ID",
-            "review": "Review",
-            "rating": "Rating"
-        }
-    },
-    "stores": {
-        "stores": "Stores",
-        "titles": {
-            "create": "Create Store",
-            "edit": "Edit Store",
-            "list": "Stores",
-            "show": "Show Store"
-        },
-        "fields": {
-            "id": "Store ID",
-            "title": "Title",
-            "isActive": "Active",
-            "createdAt": "CreatedAt",
-            "address": "Address",
-            "email": "Email",
-            "gsm": "Phone"
-        },
-        "buttons": {
-            "editProducts": "Edit Products",
-            "addProduct": "Add Product",
-            "outOfStock": "Out Of Stock",
-            "edit": "Edit Product"
-        },
-        "selectLocation": "Choose store location on the map",
-        "storeProducts": "Store Products",
-        "tagFilterDescription": "Use tags to filter your search",
-        "all": "All",
-        "productSearch": "Product Search"
-    },
     "users": {
         "users": "Users",
         "titles": {
+            "create": "Create User",
             "edit": "Edit User",
             "list": "Users",
             "show": "User Detail"
         },
         "fields": {
             "id": "ID",
-            "avatar": {
-                "label": "Avatar",
-                "description": "Click or drag avatar image to this area to upload."
-            },
-            "firstName": "First Name",
-            "lastName": "Last Name",
-            "gender": {
-                "label": "Gender",
-                "Male": "Male",
-                "Female": "Female"
-            },
-            "gsm": "Gsm Number",
-            "createdAt": "CreatedAt",
-            "isActive": {
-                "label": "Is Active",
-                "true": "Yes",
-                "false": "No"
-            }
-        },
-        "filter": {
-            "title": "Filters",
-            "search": {
-                "label": "Search",
-                "placeholder": "FirstName, lastName, gsm, etc."
-            },
-            "createdAt": {
-                "label": "Created At"
-            },
-            "gender": {
-                "label": "Gender",
-                "placeholder": "Gender",
-                "male": "Male",
-                "female": "Female"
-            },
-            "isActive": {
-                "label": "Active",
-                "placeholder": "Active status",
-                "true": "Yes",
-                "false": "No"
-            },
-            "submit": "Filter"
-        },
-        "addresses": {
-            "addresses": "Addresses",
-            "address": "Address"
+            "name": "Name",
+            "email": "Email",
+            "plainPassword": "Password",
+            "enabled": "Is enabled?",
+            "isVerified": "Is verified?"
+        }        
+    },
+    "images": {
+        "fields": {
+            "creationDate": "Date",
+            "processingDate": "Processed in"
         }
     }
 }
